# Dev-Voyage

./: .cnb.yml  .gitignore  README.md  netlify.toml  package.json  pnpm-lock.yaml
docs/: README.md
docs/.vuepress/: client.ts  collections.ts  config.ts  env.d.ts  navbar.ts
docs/.vuepress/components/: AmadeusCard.vue  AmadeusChaos.vue  AmadeusEmergence.vue  AmadeusNavigator.vue  AmadeusNeuralBg.vue  AmadeusTerminal.vue  CTASection.vue  useDagLayout.ts
docs/.vuepress/layouts/: AmadeusGateLayout.vue  CustomHomeLayout.vue  EssentialHomeLayout.vue
docs/amadeus-gate/: 0.md  1.md  2.md  README.md  大纲new.md
docs/blog/preview/: markdown.md
docs/essential/: README.md  github-intro.md
docs/essential/command-line/: 1-why-cli.md  2-first-command.md  3-file-system.md  4-pipes-redirections.md  5-shells.md  6-env-vars.md  7-ssh.md  8-scripts.md  README.md
docs/essential/elementary-system/: 01-your-phone-vs-nasa.md  02-file-management.md  03-installing-software.md  04-wifi-troubleshooting.md  05-accounts-passwords.md  06-system-settings.md  07-multi-device.md  08-command-line.md  09-performance-optimization.md  10-ai-era.md  README.md
docs/essential/git-usage/: 1-concepts.md  6-remote.md  (+6 more)
docs/fullstack-course/: 0.md  10.md  11.md  12.md  13.md  14.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md  index.md
docs/post/: README.md
personal-website/backend/: pyproject.toml
personal-website/backend/src/backend/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py
personal-website/frontend/: .eslintrc.cjs  nuxt.config.ts  package.json  pnpm-lock.yaml
(+41 files in other folders)
