[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "“zhb_database”",email = "“zhb3158065625@qq.com”"},
]
dependencies = ["fastapi>=0.138.0", "uvicorn>=0.49.0", "sqlalchemy>=2.0.51", "python-jose[cryptography]", "passlib[bcrypt]"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
